--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Tourist-guide</title>
 </head>
 <body>
-$END$
+
+
+<h1>Welcome to the touristguide over Denmark!</h1>
+
+
+
+
 </body>
 </html>
